--- a/sens.html
+++ b/sens.html
@@ -1,224 +1,239 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-		  href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap"
-		  rel="stylesheet"
-		/>
-		<title>Le délice des sens</title>
-		<link rel="stylesheet" href="style.css" />
-		<script
-		  src="https://kit.fontawesome.com/d21317d11a.js"
-		  crossorigin="anonymous"
-		></script>
-	  </head>
-	<body>
-		<a href="./index.html">
-		<header>
-			<h1>ohmyfood</h1>
-			<i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
-		</header>
-		</a>
-		
-		<img src="restaurants/sens.jpg" alt="resto sens"/>
-		
-		<main class="nom">
-			<h2>Le délice des sens</h2>
-			<section class="coeur">
-			<input id="checkbox" class="btn-check" type="checkbox">
-            <label for="checkbox" class="like">
-              <i class="fas fa-heart"></i>
-              <i class="far fa-heart"></i>    
-            </label>
-			</section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,400&family=Shrikhand&display=swap"
+      rel="stylesheet"
+    />
+    <title>Le délice des sens</title>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/d21317d11a.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <a href="./index.html">
+      <header>
+        <h1>ohmyfood</h1>
+        <i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i>
+      </header>
+    </a>
 
-			<section class="menus">
+    <img src="restaurants/sens.jpg" alt="resto sens" />
+
+    <main class="nom">
+      <h2>Le délice des sens</h2>
+      <section class="coeur">
+        <input id="checkbox" class="btn-check" type="checkbox" />
+        <label for="checkbox" class="like">
+          <i class="fas fa-heart"></i>
+          <i class="far fa-heart"></i>
+        </label>
+      </section>
+
+      <section class="menus">
         <!--Entrées du menu-->
-				<span class="menus__plats">
-					<span class="h3">ENTREES</span>
-					<span class="menu__plats__liste">
-						<input class="btn-radio" id="tartare_thon" name="entree" type="radio">
-                            <label for="tartare_thon" class="choix">
-						<span class="menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Tartare de thon</span>
-								<span class="p">
-									Assaisonné au yuzu
+        <span class="menus__plats">
+          <span class="h3">ENTREES</span>
+          <span class="menu__plats__liste">
+            <input
+              class="btn-radio"
+              id="tartare_thon"
+              name="entree"
+              type="radio"
+            />
+            <label for="tartare_thon" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Tartare de thon</span>
+                  <span class="p"> Assaisonné au yuzu </span>
                 </span>
-							</span>
-							<span class="menu-item__prix">25€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
-              </span>
-						</span>
-							</label>
-							<input class="btn-radio" id="homard_croustillant" name="entree" type="radio">
-                            <label for="homard_croustillant" class="choix">
-						<span class="menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Bouchée de homard croustillant</span>
-								<span class="p">
-									Et sa farandole de petits légumes
+                <span class="menu-item__prix">25€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
                 </span>
-							</span>
-							<span class="menu-item__prix">35€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
               </span>
-						</span>
-							</label>
+            </label>
+            <input
+              class="btn-radio"
+              id="homard_croustillant"
+              name="entree"
+              type="radio"
+            />
+            <label for="homard_croustillant" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Bouchée de homard croustillant</span>
+                  <span class="p"> Et sa farandole de petits légumes </span>
+                </span>
+                <span class="menu-item__prix">35€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
+                </span>
+              </span>
+            </label>
 
-							<input class="btn-radio" id="veloute_cepes" name="entree" type="radio">
-                            <label for="veloute_cepes" class="choix">
-
-						<span class="menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Velouté de cèpes</span>
-								<span class="p">
-									Aux truffes
+            <input
+              class="btn-radio"
+              id="veloute_cepes"
+              name="entree"
+              type="radio"
+            />
+            <label for="veloute_cepes" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Velouté de cèpes</span>
+                  <span class="p"> Aux truffes </span>
                 </span>
-							</span>
-							<span class="menu-item__prix">20€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
+                <span class="menu-item__prix">20€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
+                </span>
               </span>
-						</span>
-							</label>
+            </label>
           </span>
-				</span>
+        </span>
         <!--Plats du menu-->
-				<span class="menus__plats">
-					<span class="h3">PLATS</span>
-					<span class="menu__plats__liste">
-						<input class="btn-radio" id="poulet_herbes" name="plat" type="radio">
-                            <label for="poulet_herbes" class="choix">
-						<span class="menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Poulet rôti aux herbes de provence </span>
-								<span class="p">
-									Et sa crème de truffe
+        <span class="menus__plats">
+          <span class="h3">PLATS</span>
+          <span class="menu__plats__liste">
+            <input
+              class="btn-radio"
+              id="poulet_herbes"
+              name="plat"
+              type="radio"
+            />
+            <label for="poulet_herbes" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Poulet rôti aux herbes de provence </span>
+                  <span class="p"> Et sa crème de truffe </span>
                 </span>
-							</span>
-							<span class="menu-item__prix">40€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
-              </span>
-						</span>
-							</label>
-							<input class="btn-radio" id="langouste_rotie" name="plat" type="radio">
-                            <label for="langouste_rotie" class="choix">
-						<span class="menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Langouste rôtie</span>
-								<span class="p">
-									Et ses légumes de saison
+                <span class="menu-item__prix">40€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
                 </span>
-							</span>
-							<span class="menu-item__prix">35€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
               </span>
-						</span>
-							</label>
-							<input class="btn-radio" id="cote_angus" name="plat" type="radio">
-							<label for="cote_angus" class="choix">
-
-						<span class="menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Côte de boeuf angus</span>
-								<span class="p">
-									Et sa purée de panais
+            </label>
+            <input
+              class="btn-radio"
+              id="langouste_rotie"
+              name="plat"
+              type="radio"
+            />
+            <label for="langouste_rotie" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Langouste rôtie</span>
+                  <span class="p"> Et ses légumes de saison </span>
                 </span>
-							</span>
-							<span class="menu-item__prix">44€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
+                <span class="menu-item__prix">35€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
+                </span>
               </span>
-						</span>
-							</label>
-            </span>
+            </label>
+            <input class="btn-radio" id="cote_angus" name="plat" type="radio" />
+            <label for="cote_angus" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Côte de boeuf angus</span>
+                  <span class="p"> Et sa purée de panais </span>
+                </span>
+                <span class="menu-item__prix">44€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
+                </span>
+              </span>
+            </label>
           </span>
-          <!--Desserts du menu-->
-				<span class="menus__plats">
-					<span class="h3">DESSERTS</span>
-					<span class="menu__plats__liste">
-						<input class="btn-radio" id="farandole" name="dessert" type="radio">
-                            <label for="farandole" class="choix">
-
-						<span class=" menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Farandole de desserts</span>
-								<span class="p">
-								 Du chef
+        </span>
+        <!--Desserts du menu-->
+        <span class="menus__plats">
+          <span class="h3">DESSERTS</span>
+          <span class="menu__plats__liste">
+            <input
+              class="btn-radio"
+              id="farandole"
+              name="dessert"
+              type="radio"
+            />
+            <label for="farandole" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Farandole de desserts</span>
+                  <span class="p"> Du chef </span>
                 </span>
-							</span>
-							<span class="menu-item__prix">18€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
-              </span>
-						</span>
-							</label>
-							<input class="btn-radio" id="creme_brulee" name="dessert" type="radio">
-                            <label for="creme_brulee" class="choix">
-
-						<span class="menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Crème brulée</span>
-								<span class="p">
-									Revisitée
+                <span class="menu-item__prix">18€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
                 </span>
-							</span>
-							<span class="menu-item__prix">22€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
               </span>
-						</span>
-							</label>
-							<input class="btn-radio" id="tiramisu" name="dessert" type="radio">
-                            <label for="tiramisu" class="choix">
-
-						<span class="menu-item">
-							<span class="menu-item__description">
-								<span class="h4">Tiramisu</span>
-								<span class="p">
-									A la noisette
+            </label>
+            <input
+              class="btn-radio"
+              id="creme_brulee"
+              name="dessert"
+              type="radio"
+            />
+            <label for="creme_brulee" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Crème brulée</span>
+                  <span class="p"> Revisitée </span>
                 </span>
-							</span>
-							<span class="menu-item__prix">23€</span>
-							<span class="menu-item__check">
-								<i class="fas fa-check"></i>
+                <span class="menu-item__prix">22€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
+                </span>
               </span>
-						</span>
-							</label>
-            </span>
+            </label>
+            <input
+              class="btn-radio"
+              id="tiramisu"
+              name="dessert"
+              type="radio"
+            />
+            <label for="tiramisu" class="choix">
+              <span class="menu-item">
+                <span class="menu-item__description">
+                  <span class="h4">Tiramisu</span>
+                  <span class="p"> A la noisette </span>
+                </span>
+                <span class="menu-item__prix">23€</span>
+                <span class="menu-item__check">
+                  <i class="fas fa-check"></i>
+                </span>
+              </span>
+            </label>
           </span>
-			</section>
+        </span>
+      </section>
       <!--Command button-->
-			<section class="order">
-				<button>Commander</button>
-			</section>
-		</main>
+      <section class="order">
+        <button>Commander</button>
+      </section>
+    </main>
     <!--Footer-->
-		<footer>
-			<h2>ohmyfood</h2>
-			<h3>
-				<i class="fas fa-utensils"></i>
-				Proposer un restaurant
+    <footer>
+      <h2>ohmyfood</h2>
+      <h3>
+        <i class="fas fa-utensils"></i>
+        Proposer un restaurant
       </h3>
-			<p>
-				<i class="fas fa-hands-helping"></i>
-				Devenir partenaire
-			</p>
-			<p>
-				Mentions légales
-			</p>
-			<p>
-				<a href="#">Contact</a>
-			</p>
-		</footer>
-	</body>
+      <p>
+        <i class="fas fa-hands-helping"></i>
+        Devenir partenaire
+      </p>
+      <p>Mentions légales</p>
+      <p>
+        <a href="#">Contact</a>
+      </p>
+    </footer>
+  </body>
 </html>
